--- a/src/app.css
+++ b/src/app.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+	html {
+		font-size: 13px;
+		font-weight: 400;
+	}
+}
+
 @layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-md shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 disabled:outline-none disabled:bg-gray-300 disabled:ring-0 disabled:text-gray-500;
-  }
+	.btn-primary {
+		@apply py-2 px-4 bg-amber-500 text-white font-semibold rounded-md shadow-md hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-amber-400 focus:ring-opacity-75 disabled:outline-none disabled:bg-gray-300 disabled:ring-0 disabled:text-gray-500 disabled:shadow-none;
+	}
 }
