--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -34,7 +34,7 @@ $background: #000;
 	--label-color: #cecece;
 	--control-background: #222;
 	--mdc-typography-body1-font-size: 0.9rem;
-	--body-background: #333;
+	--body-background: #2c2c2c;
 	--hover-color: #2a2a2e;
 	--background: #757575;
 	--footer-background: #000;
