--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -45,6 +45,7 @@ $background: #fefefe;
 	--background: #212121;
 	--footer-background: #c9c9c9;
 	--shadow-color: #e0e0e0;
+	--text-content: rgba(0,0,0,0.6);
 }
 
 html,
