--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -39,6 +39,8 @@ $background: #000;
 	--background: #757575;
 	--footer-background: #000;
 	--shadow-color: #000;
+	--text-content: rgba(255,255,255,0.6);
+
 }
 
 html,
