--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,10 @@
 @import '@fontsource/fira-mono/400.css';
 /* @import "@fontsource/fira-mono/400-italic.css"; */
 
+.p-2 {
+	padding: 12px;
+}
+
 .mt-10 {
 	margin-top: 10px;
 }
