--- a/src/app.css
+++ b/src/app.css
@@ -1,22 +1,19 @@
 
 /* @import "@fontsource/fira-mono/400-italic.css"; */
 
-html, body {
-	background-image: url('/background.jpg');
-}
 
-dialog {
+/* dialog {
 	background-color: #fafcf9;
-}
+} */
 
-input, textarea, select {
+/* input, textarea, select {
 	padding: 3px 6px;
 }
 button {
 	padding: 3px 16px;
-}
+} */
 
-.p-2 {
+/* .p-2 {
 	padding: 12px;
 }
 
@@ -104,4 +101,4 @@ section {
 		margin: 0 auto;
 	}
 }
-
+ */
