--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,11 +3,15 @@
 
 @import "../node_modules/bulma/bulma.sass";
 
-@import '../node_modules/@fontsource/fira-mono/400.css';
-//@import '@fontsource/fira-mono/400.css';
+@import "../node_modules/@fontsource/fira-mono/400.css";
+
+:root {
+	--font-mono: 'Fira Mono', monospace;
+}
 
 code,
 pre {
 	font-family: var(--font-mono);
 	font-size: 0.9em;
 }
+
