--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,7 +3,7 @@
 
 @import "../node_modules/bulma/bulma.sass";
 
-@import "../node_modules/@fontsource/fira-mono/400.css";
+@import url('https://fonts.cdnfonts.com/css/fira-mono');
 
 :root {
 	--font-mono: 'Fira Mono', monospace;
