--- a/sass/darkstyle.scss
+++ b/sass/darkstyle.scss
@@ -32,7 +32,7 @@ $link: hsl(204, 64%, 44%);
 $text: hsl(0, 0%, 71%);
 $scheme-main: hsl(0, 0%, 15%);
 $white: hsl(0, 0%, 10%);
-$white-bis: hsl(0, 0%, 13%);
+$white-bis: hsl(0, 0%, 10%);
 $grey-darker: hsl(0, 0%, 79%);
 $grey-lighter: hsl(0, 0%, 34%);
 $grey-light: hsl(0, 0%, 29%);
@@ -40,7 +40,6 @@ $grey-light: hsl(0, 0%, 29%);
 $text-strong: hsl(0, 0%, 87%);
 // $input-color: hsl(0, 0%, 79%);
 // $input-background-color:hsl(0, 0%, 10%);
-
 $menu-item-hover-color: hsl(32, 100%, 75%);
 $menu-item-hover-background-color: hsl(0, 0%, 4%);
 //$menu-item-active-color:
@@ -55,7 +54,7 @@ $input-background-color: hsl(0, 0%, 10%);
 // $footer-padding: 3rem 1.5rem 6rem;
 $footer-background-color: hsl(0, 0%, 2%);
 $navbar-item-color: hsl(0, 0%, 71%);
-$navbar-background-color: hwb(0 0% 100%);
+$navbar-background-color: hsl(0, 0%, 20%);
 $navbar-item-hover-background-color: $link;
 $navbar-item-hover-color: hsl(0, 0%, 90%);
 $footer-background-color:hsl(0, 0%, 17%);
