--- a/sass/darkstyle.scss
+++ b/sass/darkstyle.scss
@@ -131,6 +131,7 @@ $modal-card-head-background-color:hsl(0, 0%, 17%);
 // button:focus-visible {
 //   outline: 4px auto -webkit-focus-ring-color;
 // }
+$body-overflow-y: auto;
 
 // Import Bulma
 @import '../node_modules/bulma/bulma.sass';
