--- a/sass/lightstyle.scss
+++ b/sass/lightstyle.scss
@@ -6,4 +6,6 @@ $modal-background-background-color: rgba(0, 0, 0, 0.25);
 $navbar-background-color: hsl(0, 0%, 90%);
 $navbar-item-hover-background-color: $link;
 $navbar-item-hover-color: hsl(0, 0%, 90%);
+$body-overflow-y: auto;
+
 @import "../node_modules/bulma/bulma.sass";
