--- a/sass/lightstyle.scss
+++ b/sass/lightstyle.scss
@@ -7,5 +7,8 @@ $navbar-background-color: hsl(0, 0%, 90%);
 $navbar-item-hover-background-color: $link;
 $navbar-item-hover-color: hsl(0, 0%, 90%);
 $body-overflow-y: auto;
+html {
+  overflow: auto;
+}
 
 @import "../node_modules/bulma/bulma.sass";
