--- a/static/darkstyle.css
+++ b/static/darkstyle.css
@@ -6,6 +6,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%; }
 
+html {
+  overflow: auto; }
+
 /*! bulma.io v0.9.4 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
 .button, .input, .textarea, .select select, .file-cta,
