--- a/static/lightstyle.css
+++ b/static/lightstyle.css
@@ -1,3 +1,6 @@
+html {
+  overflow: auto; }
+
 /*! bulma.io v0.9.4 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
 .button, .input, .textarea, .select select, .file-cta,
