--- a/static/lightstyle.css
+++ b/static/lightstyle.css
@@ -4128,14 +4128,14 @@ a.navbar-item,
     min-height: 3.25rem;
     padding-bottom: calc(0.5rem - 1px); }
     .navbar-item.is-tab:focus, .navbar-item.is-tab:hover {
-      background-color: transparent;
+      background-color: #f2f2f2;
       border-bottom-color: #485fc7; }
     .navbar-item.is-tab.is-active {
-      background-color: transparent;
+      background-color: #f2f2f2;
       border-bottom-color: #485fc7;
       border-bottom-style: solid;
       border-bottom-width: 3px;
-      color: #485fc7;
+      color: #1a1a1a;
       padding-bottom: calc(0.5rem - 3px); }
 
 .navbar-content {
