--- a/sass/lightstyle.scss
+++ b/sass/lightstyle.scss
@@ -1,7 +1,9 @@
 
 @charset "utf-8";
 
+@import url('https://use.typekit.net/end3rqq.css');
 // $link: hsl(204, 64%, 44%);
+// $family-sans-serif: source-serif-pro, serif; 
 $modal-background-background-color: rgba(0, 0, 0, 0.25);
 $navbar-background-color: hsl(0, 0%, 98%);
 // $navbar-item-hover-background-color: $link;
@@ -25,6 +27,14 @@ $body-overflow-y: auto;
 
 html {
   overflow: auto;
+}
+
+.title, .subtitle {
+  font-family: source-serif-pro, serif;
+}
+
+.modal-card-title {
+  font-family: source-serif-pro, serif;
 }
 
 @import "../node_modules/bulma/bulma.sass";
