--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
 
-@import "darkstyle.css" (prefers-color-scheme: dark);
-@import "lightstyle.css" (prefers-color-scheme: light)
+/* @import "darkstyle.css" (prefers-color-scheme: dark); */
+ @import "lightstyle.css" /* (prefers-color-scheme: light) */
 
