--- a/sass/lightstyle.scss
+++ b/sass/lightstyle.scss
@@ -38,4 +38,16 @@
 //   font-family: source-serif-pro, serif;
 // }
 
+$body-size: 16px !default;
+
 @import "../node_modules/bulma/bulma.sass";
+
+// html {
+//   font-size: 8px;
+//   @include tablet {
+//     font-size: 14px;
+//   }
+//   @include desktop {
+//     font-size: 16px;
+//   }
+// }
